--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:wemos_d1_uno32]
+board = wemos_d1_uno32
 platform = espressif32
-board = esp32dev
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
@@ -20,3 +20,5 @@ lib_deps =
 	adafruit/Adafruit Unified Sensor @ ^1.1.14
 	me-no-dev/AsyncTCP @ ^1.1.1
 	ingelobito/RBDdimmer@^1.0
+	marian-craciunescu/ESP32Ping@^1.7
+	knolleary/PubSubClient@^2.8
