--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:wemos_d1_uno32]
-board = wemos_d1_uno32
+; [env:wemos_d1_uno32]
+; board = wemos_d1_uno32
+[env:esp32dev]
+board = esp32dev
 platform = espressif32
 framework = arduino
 monitor_speed = 115200
