--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,16 @@
         "algorithm": "cpp",
         "*.bak2": "cpp",
         "tuple": "cpp",
-        "streambuf": "cpp"
+        "streambuf": "cpp",
+        "array": "cpp",
+        "deque": "cpp",
+        "string": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
+        "vector": "cpp",
+        "string_view": "cpp",
+        "memory": "cpp",
+        "random": "cpp",
+        "initializer_list": "cpp"
     }
 }
