--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,8 @@
 
 ; [env:wemos_d1_uno32]
 ; board = wemos_d1_uno32
-[env:esp32dev]
-board = esp32dev
+[env:esp32doit-devkit-v1]
+board = esp32doit-devkit-v1
 platform = espressif32
 framework = arduino
 monitor_speed = 115200
