--- a/platformio.ini
+++ b/platformio.ini
@@ -1,26 +1,37 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
-; [env:wemos_d1_uno32]
-; board = wemos_d1_uno32
-[env:esp32doit-devkit-v1]
-board = esp32doit-devkit-v1
-platform = espressif32
-framework = arduino
+; ---------- Non-TLS (EMQX lokal:1883) ----------
+[env:esp32-nontls]
+platform      = espressif32
+board         = esp32doit-devkit-v1
+framework     = arduino
 monitor_speed = 115200
-lib_deps = 
-	marvinroger/AsyncMqttClient @ ^0.8.2
-	bblanchon/ArduinoJson @ ^7.0.4
-	adafruit/DHT sensor library @ ^1.4.6
-	adafruit/Adafruit Unified Sensor @ ^1.1.14
-	me-no-dev/AsyncTCP @ ^1.1.1
-	ingelobito/RBDdimmer@^1.0
-	marian-craciunescu/ESP32Ping@^1.7
-	knolleary/PubSubClient@^2.8
+build_flags =
+  -DMQTT_MAX_PACKET_SIZE=1024   ; atau 2048 kalau payload besar
+  -DMQTT_KEEPALIVE=30
+  -DUSE_TLS=0                  ; <— app flag kamu
+lib_deps =
+  bblanchon/ArduinoJson @ ^7.0.4
+  adafruit/DHT sensor library @ ^1.4.6
+  adafruit/Adafruit Unified Sensor @ ^1.1.14
+  me-no-dev/AsyncTCP @ ^1.1.1
+  marian-craciunescu/ESP32Ping @ ^1.7
+  knolleary/PubSubClient@^2.8
+  ingelobito/RBDdimmer@^1.0
+
+; ---------- TLS (broker 8883) ----------
+[env:esp32-tls]
+platform      = espressif32
+board         = esp32doit-devkit-v1
+framework     = arduino
+monitor_speed = 115200
+build_flags =
+  -DMQTT_MAX_PACKET_SIZE=1024   ; atau 2048 kalau payload besar
+  -DMQTT_KEEPALIVE=30
+  -DUSE_TLS=1                   ; <— app flag kamu
+lib_deps =
+  bblanchon/ArduinoJson @ ^7.0.4
+  adafruit/DHT sensor library @ ^1.4.6
+  adafruit/Adafruit Unified Sensor @ ^1.1.14
+  me-no-dev/AsyncTCP @ ^1.1.1
+  marian-craciunescu/ESP32Ping @ ^1.7
+  knolleary/PubSubClient@^2.8
+  ingelobito/RBDdimmer@^1.0
