--- a/platformio.ini
+++ b/platformio.ini
@@ -27,6 +27,7 @@ build_flags =
   -DMQTT_MAX_PACKET_SIZE=1024   ; atau 2048 kalau payload besar
   -DMQTT_KEEPALIVE=30
   -DUSE_TLS=1                   ; <— app flag kamu
+  -DSENSOR_MOCK=0               ; <— app flag kamu
 lib_deps =
   bblanchon/ArduinoJson @ ^7.0.4
   adafruit/DHT sensor library @ ^1.4.6
